@@ -1,6 +1,8 @@
 #!/bin/bash
-# Gentoo Foundation
-# Brian Harring <ferringb@gentoo.org>
+# ebuild-functions.sh; ebuild env functions, saved with the ebuild (not specific to the portage version).
+# Copyright 2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+$Header$
 
 use() {
 	if useq ${1}; then
