@@ -1,3 +1,8 @@
+# syncexceptions.py: base sync exception class. not used currently (should be though)
+# Copyright 2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+$Header$
+
 class SyncException(Exception):
 	"""base sync exception"""
 	def __init__(self,value):
