@@ -1,9 +1,7 @@
-#11/02/2004
-#Brian Harring
-#<ferringb@gentoo.org
-
-#user specified fetchcommand
-#basically a wrapper around a file system binary being called.
+# fetchcommand.py; fetcher class encapsulating make.conf FETCHCOMMAND/RESUMECOMMAND, and the ensueing spawn calls
+# Copyright 2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+$Header$
 
 import urlparse,types
 import portage_exec
